--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -41,3 +41,8 @@
 
 // Utilities
 @import '../../node_modules/bootstrap/scss/utilities/api';
+
+// custom
+@import './components/layout';
+@import './components/navLogo';
+@import './components/toTopBtn';
