--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -43,6 +43,5 @@
 @import '../../node_modules/bootstrap/scss/utilities/api';
 
 // custom
-@import './components/layout';
-@import './components/navLogo';
+@import './components/logo';
 @import './components/toTopBtn';
