--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -404,6 +404,7 @@ $negative-spacers: if(
 // scss-docs-start position-map
 $position-values: (
   0: 0,
+  10: 10%,
   50: 50%,
   100: 100%,
 ) !default;
