--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -390,6 +390,7 @@ $spacers: (
   5: $spacer * 2,
   6: $spacer * 2.5,
   7: $spacer * 3,
+  8: $spacer * 3.5,
 ) !default;
 
 $negative-spacers: if(
