--- a/src/sass/helpers/_utilities.scss
+++ b/src/sass/helpers/_utilities.scss
@@ -638,6 +638,14 @@ $utilities: map-merge(
       values: (
         '-1': -1,
       )
+    ),    
+    "aspect-ratio": (
+      responsive: true,
+      property: aspect-ratio,
+      class: aspect-ratio,
+      values: (
+        '1-1': 1/1,
+      )
     ),
   ),
   $utilities
