feat: 完成 "好評如潮" 桌面板

--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -46,3 +46,5 @@
 @import './components/logo';
 @import './components/toTopBtn';
 @import './components/socialMediaIMG';
+@import './components/avatar';
+@import './components/customCarousel';
