--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -67,8 +67,9 @@ $colors: (
 // scss-docs-end colors-map
 
 // scss-docs-start theme-color-variables
-$primary: $blue !default;
-$secondary: $gray-600 !default;
+$primary: #56c4c5; //$blue !default;
+$secondary: #f5ca52; //$gray-600 !default;
+$third: #ff5d50;
 $success: $green !default;
 $info: $cyan !default;
 $warning: $yellow !default;
@@ -79,12 +80,9 @@ $dark: $gray-900 !default;
 
 // scss-docs-start theme-colors-map
 $theme-colors: (
-  'primary': #56c4c5,
-  //$primary,
-  'secondary': #f5ca52,
-  //$secondary,
-  'third': #ff5d50,
-  //$secondary,
+  'primary': $primary,
+  'secondary': $secondary,
+  'third': $third,
   'success': $success,
   'info': $info,
   'warning': $warning,
