feat: 完成 "好評如潮" 手機板

--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -48,3 +48,4 @@
 @import './components/socialMediaIMG';
 @import './components/avatar';
 @import './components/customCarousel';
+@import './components/bgImage';
