feat: 完成 footer

--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -49,3 +49,4 @@
 @import './components/avatar';
 @import './components/customCarousel';
 @import './components/bgImage';
+@import './components/footer';
