--- a/src/sass/helpers/_utilities.scss
+++ b/src/sass/helpers/_utilities.scss
@@ -66,6 +66,7 @@ $utilities: map-merge(
     // scss-docs-end utils-shadow
     // scss-docs-start utils-position
     "position": (
+      responsive: true,
       property: position,
       values: static relative absolute fixed sticky
     ),
@@ -88,6 +89,7 @@ $utilities: map-merge(
       values: $position-values
     ),
     "translate-middle": (
+      responsive: true,
       property: transform,
       class: translate-middle,
       values: (
