feat: 完成 "計費方式說明" header

--- a/src/sass/components/_avatar.scss
+++ b/src/sass/components/_avatar.scss
@@ -1,3 +1,5 @@
+// ==========================  index.html  =========================================
+// 好評如潮 大頭貼
 .avatar {
   width: 80px;
   height: 80px;
