--- a/src/sass/components/_socialMediaIMG.scss
+++ b/src/sass/components/_socialMediaIMG.scss
@@ -1,3 +1,5 @@
+// ==========================  index.html  =========================================
+// 三大平台，我來搞定，社群軟體圖片
 .socialMediaIMG {
   width: 90px;
   height: 90px;
