--- a/src/sass/components/_customCarousel.scss
+++ b/src/sass/components/_customCarousel.scss
@@ -1,3 +1,5 @@
+// ==========================  index.html  =========================================
+// 好評如潮 輪播
 .carousel-indicators [data-bs-target] {
   width: 10px;
   height: 10px;
