--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -645,6 +645,7 @@ $h6-font-size: $font-size-base !default;
 
 // scss-docs-start font-sizes
 $font-sizes: (
+  0: 0.75rem,
   1: $h1-font-size,
   2: $h2-font-size,
   3: $h3-font-size,
