--- a/styles/all.css
+++ b/styles/all.css
@@ -10666,6 +10666,26 @@ textarea.form-control-lg {
     border: 0 !important;
   }
 
+  .w-sm-25 {
+    width: 25% !important;
+  }
+
+  .w-sm-50 {
+    width: 50% !important;
+  }
+
+  .w-sm-75 {
+    width: 75% !important;
+  }
+
+  .w-sm-100 {
+    width: 100% !important;
+  }
+
+  .w-sm-auto {
+    width: auto !important;
+  }
+
   .min-vh-sm-auto {
     min-height: auto !important;
   }
@@ -12328,6 +12348,34 @@ textarea.form-control-lg {
     padding-left: 6.5rem !important;
   }
 
+  .fs-sm-0 {
+    font-size: 0.75rem !important;
+  }
+
+  .fs-sm-1 {
+    font-size: calc(1.375rem + 1.5vw) !important;
+  }
+
+  .fs-sm-2 {
+    font-size: calc(1.325rem + 0.9vw) !important;
+  }
+
+  .fs-sm-3 {
+    font-size: calc(1.3rem + 0.6vw) !important;
+  }
+
+  .fs-sm-4 {
+    font-size: calc(1.275rem + 0.3vw) !important;
+  }
+
+  .fs-sm-5 {
+    font-size: 1.25rem !important;
+  }
+
+  .fs-sm-6 {
+    font-size: 1rem !important;
+  }
+
   .text-sm-start {
     text-align: left !important;
   }
@@ -12544,6 +12592,26 @@ textarea.form-control-lg {
 
   .border-md-0 {
     border: 0 !important;
+  }
+
+  .w-md-25 {
+    width: 25% !important;
+  }
+
+  .w-md-50 {
+    width: 50% !important;
+  }
+
+  .w-md-75 {
+    width: 75% !important;
+  }
+
+  .w-md-100 {
+    width: 100% !important;
+  }
+
+  .w-md-auto {
+    width: auto !important;
   }
 
   .min-vh-md-auto {
@@ -14208,6 +14276,34 @@ textarea.form-control-lg {
     padding-left: 6.5rem !important;
   }
 
+  .fs-md-0 {
+    font-size: 0.75rem !important;
+  }
+
+  .fs-md-1 {
+    font-size: calc(1.375rem + 1.5vw) !important;
+  }
+
+  .fs-md-2 {
+    font-size: calc(1.325rem + 0.9vw) !important;
+  }
+
+  .fs-md-3 {
+    font-size: calc(1.3rem + 0.6vw) !important;
+  }
+
+  .fs-md-4 {
+    font-size: calc(1.275rem + 0.3vw) !important;
+  }
+
+  .fs-md-5 {
+    font-size: 1.25rem !important;
+  }
+
+  .fs-md-6 {
+    font-size: 1rem !important;
+  }
+
   .text-md-start {
     text-align: left !important;
   }
@@ -14424,6 +14520,26 @@ textarea.form-control-lg {
 
   .border-lg-0 {
     border: 0 !important;
+  }
+
+  .w-lg-25 {
+    width: 25% !important;
+  }
+
+  .w-lg-50 {
+    width: 50% !important;
+  }
+
+  .w-lg-75 {
+    width: 75% !important;
+  }
+
+  .w-lg-100 {
+    width: 100% !important;
+  }
+
+  .w-lg-auto {
+    width: auto !important;
   }
 
   .min-vh-lg-auto {
@@ -16088,6 +16204,34 @@ textarea.form-control-lg {
     padding-left: 6.5rem !important;
   }
 
+  .fs-lg-0 {
+    font-size: 0.75rem !important;
+  }
+
+  .fs-lg-1 {
+    font-size: calc(1.375rem + 1.5vw) !important;
+  }
+
+  .fs-lg-2 {
+    font-size: calc(1.325rem + 0.9vw) !important;
+  }
+
+  .fs-lg-3 {
+    font-size: calc(1.3rem + 0.6vw) !important;
+  }
+
+  .fs-lg-4 {
+    font-size: calc(1.275rem + 0.3vw) !important;
+  }
+
+  .fs-lg-5 {
+    font-size: 1.25rem !important;
+  }
+
+  .fs-lg-6 {
+    font-size: 1rem !important;
+  }
+
   .text-lg-start {
     text-align: left !important;
   }
@@ -16304,6 +16448,26 @@ textarea.form-control-lg {
 
   .border-xl-0 {
     border: 0 !important;
+  }
+
+  .w-xl-25 {
+    width: 25% !important;
+  }
+
+  .w-xl-50 {
+    width: 50% !important;
+  }
+
+  .w-xl-75 {
+    width: 75% !important;
+  }
+
+  .w-xl-100 {
+    width: 100% !important;
+  }
+
+  .w-xl-auto {
+    width: auto !important;
   }
 
   .min-vh-xl-auto {
@@ -17968,6 +18132,34 @@ textarea.form-control-lg {
     padding-left: 6.5rem !important;
   }
 
+  .fs-xl-0 {
+    font-size: 0.75rem !important;
+  }
+
+  .fs-xl-1 {
+    font-size: calc(1.375rem + 1.5vw) !important;
+  }
+
+  .fs-xl-2 {
+    font-size: calc(1.325rem + 0.9vw) !important;
+  }
+
+  .fs-xl-3 {
+    font-size: calc(1.3rem + 0.6vw) !important;
+  }
+
+  .fs-xl-4 {
+    font-size: calc(1.275rem + 0.3vw) !important;
+  }
+
+  .fs-xl-5 {
+    font-size: 1.25rem !important;
+  }
+
+  .fs-xl-6 {
+    font-size: 1rem !important;
+  }
+
   .text-xl-start {
     text-align: left !important;
   }
@@ -18184,6 +18376,26 @@ textarea.form-control-lg {
 
   .border-xxl-0 {
     border: 0 !important;
+  }
+
+  .w-xxl-25 {
+    width: 25% !important;
+  }
+
+  .w-xxl-50 {
+    width: 50% !important;
+  }
+
+  .w-xxl-75 {
+    width: 75% !important;
+  }
+
+  .w-xxl-100 {
+    width: 100% !important;
+  }
+
+  .w-xxl-auto {
+    width: auto !important;
   }
 
   .min-vh-xxl-auto {
@@ -19848,6 +20060,34 @@ textarea.form-control-lg {
     padding-left: 6.5rem !important;
   }
 
+  .fs-xxl-0 {
+    font-size: 0.75rem !important;
+  }
+
+  .fs-xxl-1 {
+    font-size: calc(1.375rem + 1.5vw) !important;
+  }
+
+  .fs-xxl-2 {
+    font-size: calc(1.325rem + 0.9vw) !important;
+  }
+
+  .fs-xxl-3 {
+    font-size: calc(1.3rem + 0.6vw) !important;
+  }
+
+  .fs-xxl-4 {
+    font-size: calc(1.275rem + 0.3vw) !important;
+  }
+
+  .fs-xxl-5 {
+    font-size: 1.25rem !important;
+  }
+
+  .fs-xxl-6 {
+    font-size: 1rem !important;
+  }
+
   .text-xxl-start {
     text-align: left !important;
   }
@@ -19948,6 +20188,54 @@ textarea.form-control-lg {
   }
 
   .fs-4 {
+    font-size: 1.5rem !important;
+  }
+
+  .fs-sm-1 {
+    font-size: 2.5rem !important;
+  }
+
+  .fs-sm-2 {
+    font-size: 2rem !important;
+  }
+
+  .fs-sm-3 {
+    font-size: 1.75rem !important;
+  }
+
+  .fs-sm-4 {
+    font-size: 1.5rem !important;
+  }
+
+  .fs-md-1 {
+    font-size: 2.5rem !important;
+  }
+
+  .fs-md-2 {
+    font-size: 2rem !important;
+  }
+
+  .fs-md-3 {
+    font-size: 1.75rem !important;
+  }
+
+  .fs-md-4 {
+    font-size: 1.5rem !important;
+  }
+
+  .fs-lg-1 {
+    font-size: 2.5rem !important;
+  }
+
+  .fs-lg-2 {
+    font-size: 2rem !important;
+  }
+
+  .fs-lg-3 {
+    font-size: 1.75rem !important;
+  }
+
+  .fs-lg-4 {
     font-size: 1.5rem !important;
   }
 }
