--- a/styles/all.css
+++ b/styles/all.css
@@ -5882,14 +5882,14 @@ textarea.form-control-lg {
 }
 .accordion-button:not(.collapsed) {
   color: #4db0b1;
-  background-color: #eef9f9;
-  -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
-          box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
+  background-color: transparent;
+  -webkit-box-shadow: inset 0 -1px 0 transparent;
+          box-shadow: inset 0 -1px 0 transparent;
 }
 .accordion-button:not(.collapsed)::after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%234db0b1'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-  -webkit-transform: rotate(-180deg);
-          transform: rotate(-180deg);
+  background-image: url(https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/icon_minus.svg);
+  -webkit-transform: rotate(-180deg) translateY(50%);
+          transform: rotate(-180deg) translateY(50%);
 }
 .accordion-button::after {
   -ms-flex-negative: 0;
@@ -5898,7 +5898,7 @@ textarea.form-control-lg {
   height: 1.25rem;
   margin-left: auto;
   content: "";
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  background-image: url(https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/icon_plus.svg);
   background-repeat: no-repeat;
   background-size: 1.25rem;
   -webkit-transition: -webkit-transform 0.2s ease-in-out;
@@ -5917,10 +5917,10 @@ textarea.form-control-lg {
 }
 .accordion-button:focus {
   z-index: 3;
-  border-color: #abe2e2;
+  border-color: transparent;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(86, 196, 197, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(86, 196, 197, 0.25);
+  -webkit-box-shadow: transparent;
+          box-shadow: transparent;
 }
 
 .accordion-header {
@@ -5929,7 +5929,7 @@ textarea.form-control-lg {
 
 .accordion-item {
   background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 1px solid transparent;
 }
 .accordion-item:first-of-type {
   border-top-left-radius: 0.25rem;
