fix: 修正圖片尺寸
快速了解客戶輪廓 的區塊，四個卡片的圖片可以再調整一下尺寸

https://github.com/jaosn60810/safe_mission2/issues/3#issue-1243827307

--- a/src/sass/helpers/_utilities.scss
+++ b/src/sass/helpers/_utilities.scss
@@ -648,7 +648,15 @@ $utilities: map-merge(
       values: (
         '-1': -1,
       )
-    ),    
+    ),
+    "scale": (
+      responsive: true,
+      property: transform,
+      class: scale,
+      values: (
+        '60': scale(0.6),
+      )
+    ),   
   ),
   $utilities
 );
