--- a/styles/all.css
+++ b/styles/all.css
@@ -10534,6 +10534,11 @@ textarea.form-control-lg {
   z-index: -1 !important;
 }
 
+.scale-60 {
+  -webkit-transform: scale(0.6) !important;
+          transform: scale(0.6) !important;
+}
+
 @media (min-width: 576px) {
   .float-sm-start {
     float: left !important;
@@ -12460,6 +12465,11 @@ textarea.form-control-lg {
 
   .z-sm--1 {
     z-index: -1 !important;
+  }
+
+  .scale-sm-60 {
+    -webkit-transform: scale(0.6) !important;
+            transform: scale(0.6) !important;
   }
 }
 @media (min-width: 768px) {
@@ -14389,6 +14399,11 @@ textarea.form-control-lg {
   .z-md--1 {
     z-index: -1 !important;
   }
+
+  .scale-md-60 {
+    -webkit-transform: scale(0.6) !important;
+            transform: scale(0.6) !important;
+  }
 }
 @media (min-width: 992px) {
   .float-lg-start {
@@ -16316,6 +16331,11 @@ textarea.form-control-lg {
 
   .z-lg--1 {
     z-index: -1 !important;
+  }
+
+  .scale-lg-60 {
+    -webkit-transform: scale(0.6) !important;
+            transform: scale(0.6) !important;
   }
 }
 @media (min-width: 1200px) {
@@ -18245,6 +18265,11 @@ textarea.form-control-lg {
   .z-xl--1 {
     z-index: -1 !important;
   }
+
+  .scale-xl-60 {
+    -webkit-transform: scale(0.6) !important;
+            transform: scale(0.6) !important;
+  }
 }
 @media (min-width: 1400px) {
   .float-xxl-start {
@@ -20172,6 +20197,11 @@ textarea.form-control-lg {
 
   .z-xxl--1 {
     z-index: -1 !important;
+  }
+
+  .scale-xxl-60 {
+    -webkit-transform: scale(0.6) !important;
+            transform: scale(0.6) !important;
   }
 }
 @media (min-width: 1200px) {
